Removed slide ins. Added opacity changes to hide flicker. Fixed font error. Taller home section.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,9 @@
 @import "../../styles.scss";
 
 .home-section {
+  opacity: 0;
 
-  margin: 150px auto;
+  margin: 200px auto;
   color: #333;
   max-width: 90%;
 
@@ -18,7 +19,7 @@
     }
 
     @media screen and (max-width: breakpoint-max(sm)) {
-      max-width: 50%;
+      max-width: 65%;
       margin-bottom: 40px;
     }
   }
