--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap-grid.scss";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i');
 
 $open-sans: 'Open Sans', sans-serif;
 $misty-rose: #f4c3b4;
@@ -31,11 +31,11 @@ html {
 }
 
 .extrabold {
-  font-weight: 800;
+  font-weight: 700;
 }
 
 .title {
-  font-weight: 800;
+  font-weight: 700;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 5px;
